# Cerebro

./: .env.example  CLAUDE.md  Cargo.toml  econ_calendar.json
examples/: robinhood_portfolio.json  sample_portfolio.json  schwab_portfolio.json
headset/: Cargo.toml
headset/src/: error.rs  lib.rs  models.rs
headset/tests/: integration.rs
hodl/: Cargo.toml
hodl/src/: error.rs  lib.rs  models.rs
hodl/tests/: integration.rs
rapid/: Cargo.toml
rapid/src/: error.rs  lib.rs  models.rs
rapid/tests/: integration.rs
src/: app.rs  event.rs  main.rs  portfolio.rs  ui.rs
ydata/: Cargo.toml
ydata/src/: error.rs  lib.rs  models.rs
ydata/tests/: integration.rs
