[package]
name = "Cerebro"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["headset", "rapid"]

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
dotenvy = "0.15.7"
futures = "0.3"
headset = { path = "headset" }
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rapid = { path = "rapid" }